alignment fixes + removing scrollbar
Former-commit-id: c1e7591fb57dab835de5e533b724ae5ec994bbe4

--- a/apps/dash-salesforce-crm/assets/s1.css
+++ b/apps/dash-salesforce-crm/assets/s1.css
@@ -126,6 +126,7 @@ table {
 
 .indicators {
   display: flex;
+  align-items: stretch;
 }
 
 .indicator {
@@ -140,6 +141,12 @@ table {
 .tab--selected {
   background-image: linear-gradient(white, #f9f9f9);
 }
+
+::-webkit-scrollbar {
+  width: 0px;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
 @media (min-width: 900px) {
 
   #lead_grid {
